Added gdl-file-selector-util.[ch] back and also added gdl-tools.c Ported
2002-03-16  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gdl/Makefile.am: Added gdl-file-selector-util.[ch] back and also added
	gdl-tools.c
	* gdl/gdl-file-selector-util.c: (listener_cb),
	(replace_existing_file), (ok_clicked_cb), (concat_dir_and_file),
	(create_gtk_selector), (run_file_selector),
	(gdl_file_selector_open), (gdl_file_selector_open_multi),
	(gdl_file_selector_save): Ported to GTK+ 2.0 and added replace dialog
	if you selected a file in a save dialog that already exists.
	* gdl/gdl-tools.h: Added gdl_button_new_with_stock_image method.
	* gdl/gdl-tools.c: Idem.

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -52,6 +52,7 @@ libgdl_1_la_SOURCES = \
 	$(CORBA_GENERATED) \
 	default-icon.c \
 	default-icon.h \
+	gdl-tools.c \
 	gdl-dock.c \
 	gdl-dock-item.c \
 	gdl-dock-notebook.c \
@@ -59,6 +60,7 @@ libgdl_1_la_SOURCES = \
 	gdl-dock-tablabel.c \
 	gdl-dock-layout.c \
 	gdl-icons.c \
+	gdl-file-selector-util.c \
 	libgdltypebuiltins.c \
 	libgdlmarshal.c
 
@@ -84,7 +86,8 @@ libgdl_headers = \
 	gdl-dock-paned.h \
 	gdl-dock-tablabel.h \
 	gdl-dock-layout.h \
-	gdl-icons.h
+	gdl-icons.h \
+	gdl-file-selector-util.h
 
 libgdlincludedir = $(includedir)/libgdl-1.0/gdl
 libgdlinclude_HEADERS = \
