Added missing G_END_DECLS.
2002-09-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-placeholder.h: Added missing G_END_DECLS.
	* configure.in:
	* symbol-browser-control/Makefile.am:
	* symbol-browser-control/pixmaps/Makefile.am: Created Makefile.am
	for the pixmaps directory.

--- a/configure.in
+++ b/configure.in
@@ -305,6 +305,7 @@ gdl/Makefile
 symbol-browser-control/Makefile
 symbol-browser-control/tagmanager/Makefile
 symbol-browser-control/tagmanager/include/Makefile
+symbol-browser-control/pixmaps/Makefile
 idl/Makefile
 po/Makefile.in 
 gdl.spec
