--- a/configure.in
+++ b/configure.in
@@ -6,12 +6,17 @@ dnl
 dnl ==========================================================================
 
 
-AC_PREREQ(2.52)
-AC_INIT(gdl, 0.3.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gdl)
+AC_PREREQ(2.13)
+AC_INIT(gdl)
 AM_CONFIG_HEADER(config.h)
-AC_CONFIG_SRCDIR(gdl/gdl.h)
 
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+GDL_MAJOR_VERSION=0
+GDL_MINOR_VERSION=3
+GDL_MICRO_VERSION=0
+PACKAGE=gdl
+GDL_VERSION=$GDL_MAJOR_VERSION.$GDL_MINOR_VERSION.$GDL_MICRO_VERSION
+
+AM_INIT_AUTOMAKE($PACKAGE, $GDL_VERSION)
 
 AC_PROG_INTLTOOL
 
@@ -19,8 +24,6 @@ AC_SUBST(GDL_MAJOR_VERSION)
 AC_SUBST(GDL_MINOR_VERSION)
 AC_SUBST(GDL_MICRO_VERSION)
 AC_SUBST(GDL_VERSION)
-
-AC_PROG_INTLTOOL
 
 GTK_REQUIRED=1.3.9
 GNOME_REQUIRED=1.96.0
@@ -48,7 +51,7 @@ dnl -------------------------
 dnl CHECK_HEADER_DEFINE(LABEL, HEADER [,ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND ] ])
 AC_DEFUN(CHECK_HEADER_DEFINE,
 [
-	AC_MSG_CHECKING("if $1 is defined in $2")
+	AC_MSG_CHECKING(if $1 is defined in $2)
 	AC_EGREP_CPP(yes,
 [#include <$2>
 #ifdef $1
@@ -87,25 +90,28 @@ AC_EXEEXT
 AC_TYPE_SIZE_T
 AC_TYPE_OFF_T
 
-AC_MSG_CHECKING("for fpos_t")
+AC_MSG_CHECKING(for fpos_t)
 AC_EGREP_HEADER(fpos_t, stdio.h, AC_MSG_RESULT(yes),
 [
     AC_MSG_RESULT(no)
-    AC_DEFINE(fpos_t, long)
+    AC_DEFINE(fpos_t, long, [Portable fpos_t type])
 ])
 
-AC_MSG_CHECKING("for clock_t")
+AC_MSG_CHECKING(for clock_t)
 AC_EGREP_HEADER(clock_t, time.h, AC_MSG_RESULT(yes),
 [
     AC_MSG_RESULT(no)
-    AC_DEFINE(clock_t, long)
+    AC_DEFINE(clock_t, long, [Portable clock_t type])
 ])
 
-CHECK_HEADER_DEFINE(L_tmpnam, stdio.h,, AC_DEFINE(L_tmpnam, 20))
+CHECK_HEADER_DEFINE(L_tmpnam, stdio.h,, AC_DEFINE(L_tmpnam, 20, 
+	[How long an array of chars must be to be passed to tmpnam]))
+
 
 CHECK_HEADER_DEFINE(INT_MAX, limits.h,,
     CHECK_HEADER_DEFINE(MAXINT, limits.h,
-        AC_DEFINE(INT_MAX, MAXINT), AC_DEFINE(INT_MAX, 32767)))
+        AC_DEFINE(INT_MAX, MAXINT, [Maximum integer value]), 
+	AC_DEFINE(INT_MAX, 32767, [Maximum integer value])))
 
 AC_MSG_CHECKING(if struct stat contains st_ino)
 AC_TRY_COMPILE([#include <sys/stat.h>], [
@@ -116,7 +122,7 @@ AC_TRY_COMPILE([#include <sys/stat.h>], [
 ], have_st_ino=yes, have_st_ino=no)
 AC_MSG_RESULT($have_st_ino)
 if test yes = "$have_st_ino"; then
-    AC_DEFINE(HAVE_STAT_ST_INO)
+    AC_DEFINE(HAVE_STAT_ST_INO, 1, [Defined if stat struct contains st_ino])
 fi
 
 dnl Checks for library functions.
@@ -131,7 +137,7 @@ dnl SEEK_SET should be in stdio.h, but may be in unistd.h on SunOS 4.1.x
 if test "$have_fgetpos" != yes ; then
     CHECK_HEADER_DEFINE(SEEK_SET, stdio.h,,
         CHECK_HEADER_DEFINE(SEEK_SET, unistd.h,,
-            AC_DEFINE(SEEK_SET, 0)))
+            AC_DEFINE(SEEK_SET, 0, [Seek from the beginning of file])))
 fi
 
 AC_CHECK_FUNCS(mkstemp, have_mkstemp=yes)
@@ -148,7 +154,7 @@ else
     fi
     if test -d $tmpdir ; then
         AC_MSG_RESULT($tmpdir)
-        AC_DEFINE_UNQUOTED(TMPDIR, "$tmpdir")
+        AC_DEFINE_UNQUOTED(TMPDIR, "$tmpdir", [Directory for temporary files])
     else
         AC_MSG_WARN($tmpdir does not exist)
     fi
@@ -157,7 +163,7 @@ fi
 AC_CHECK_FUNCS(strerror opendir)
 AC_CHECK_FUNCS(clock times, break)
 AC_CHECK_FUNCS(remove, have_remove=yes,
-    CHECK_HEADER_DEFINE(remove, unistd.h,, AC_DEFINE(remove, unlink)))
+    CHECK_HEADER_DEFINE(remove, unistd.h,, AC_DEFINE(remove, unlink, [Portable remove])))
 
 AC_CHECK_FUNCS(truncate, have_truncate=yes)
 dnl === Cannot nest AC_CHECK_FUNCS() calls
@@ -175,12 +181,13 @@ if test "$have_setenv" != yes ; then
     if test "$have_putenv" = yes ; then
         AC_EGREP_HEADER(putenv, stdlib.h, have_putenv_prototype=yes)
         if test "$have_putenv_prototype" = yes ; then
-            AC_MSG_CHECKING("putenv prototype")
+            AC_MSG_CHECKING(putenv prototype)
             AC_EGREP_HEADER([[^A-Za-zo-9_]putenv[   ]*\(.*const.*\)[    ]*;],
                 stdlib.h, AC_MSG_RESULT(correct),
                 [
                     AC_MSG_RESULT(no const)
-                    AC_DEFINE(NON_CONST_PUTENV_PROTOTYPE)
+                    AC_DEFINE(NON_CONST_PUTENV_PROTOTYPE, 1, 
+			[Defined if putenv accepts a non-const string])
                 ])
         fi
     fi
@@ -197,18 +204,21 @@ if test no != "$with_posix_regex"; then
 main() {
     regex_t patbuf;
     exit (regcomp (&patbuf, "/hello/", 0) != 0);
-}],regcomp_works=yes,regcomp_works=no,AC_DEFINE(CHECK_REGCOMP))
+}],regcomp_works=yes,regcomp_works=no,AC_DEFINE(CHECK_REGCOMP, 1, [Defined if regcomp works]))
     AC_MSG_RESULT($regcomp_works)
     if test yes != "$regcomp_works"; then
-        AC_DEFINE(REGCOMP_BROKEN)
+        AC_DEFINE(REGCOMP_BROKEN, 1, [Defined if regcomp does not work])
     fi
 fi
 
 dnl Checks for missing prototypes
 dnl -----------------------------
-AC_CHECKING("for missing prototypes")
+AC_CHECKING(for missing prototypes)
 
-AC_DEFUN(CHECK_PROTO, [AC_EGREP_HEADER([[^A-Za-z0-9_]$1([   ]+[A-Za-z0-9_]*)?\(], $2,, AC_DEFINE(patsubst([NEED_PROTO_NAME], [NAME], translit($1, [a-z], [A-Z]))) AC_MSG_RESULT(adding prototype for $1))])
+AC_DEFUN(CHECK_PROTO, [AC_EGREP_HEADER([[^A-Za-z0-9_]$1([   ]+[A-Za-z0-9_]*)?\(], $2,, 
+	AC_DEFINE(patsubst([NEED_PROTO_NAME], [NAME], translit($1, [a-z], [A-Z])), 1, 
+		[Whether a prototype for $1 is needed]) 
+	AC_MSG_RESULT(adding prototype for $1))])
 
 if test "$have_remove" = yes ; then
     CHECK_PROTO(remove, stdio.h)
@@ -260,10 +270,6 @@ PKG_CHECK_MODULES(GDL_DEPENDENCIES,
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
-# libglade-convert, FIXME: to be removed when glade2 stabilizes
-dnl AC_PATH_PROG(LIBGLADE_CONVERT, libglade-convert, 
-dnl	AC_MSG_ERROR(libglade-convert not found))
-
 # orbit-idl
 ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
 AC_SUBST(ORBIT_IDL)
@@ -289,8 +295,9 @@ AC_SUBST(GLIB_MKENUMS)
 ALL_LINGUAS="az da de el it pt ru sv vi"
 GETTEXT_PACKAGE=gdl-1
 AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
-AC_DEFINE_UNQUOTED(GNOME_EXPLICIT_TRANSLATION_DOMAIN, "$GETTEXT_PACKAGE")
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Package name for gettext])
+AC_DEFINE_UNQUOTED(GNOME_EXPLICIT_TRANSLATION_DOMAIN, "$GETTEXT_PACKAGE", 
+	[Domain for gettext translation])
 
 AM_GLIB_GNU_GETTEXT
 
