updated for gdl.spec.in updated for gnome 2
2002-10-29  Jean Schurger <jschurger@schurger.org>

	* configure.in: updated for gdl.spec.in
	* gdl.spec.in: updated for gnome 2

--- a/configure.in
+++ b/configure.in
@@ -25,6 +25,9 @@ AC_SUBST(GDL_MINOR_VERSION)
 AC_SUBST(GDL_MICRO_VERSION)
 AC_SUBST(GDL_VERSION)
 
+SNAPSHOT=0_`date +%Y%m%d_%H%M%S`_cvs
+AC_SUBST(SNAPSHOT)
+
 GTK_REQUIRED=1.3.9
 GNOME_REQUIRED=1.96.0
 BONOBOUI_REQUIRED=1.108.1
@@ -34,6 +37,7 @@ LIBRSVG_REQUIRED=1.1.1
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
+AC_SUBST(BONOBOUI_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
 AC_SUBST(LIBRSVG_REQUIRED)
