--- a/configure.in
+++ b/configure.in
@@ -289,7 +289,7 @@ AC_SUBST(GLIB_GENMARSHAL)
 GLIB_MKENUMS="`$PKG_CONFIG --variable=glib_mkenums glib-2.0`"
 AC_SUBST(GLIB_MKENUMS)
 
-ALL_LINGUAS="am az cs da de el es fr it ja nl no pt pt_BR ru sk sv vi"
+ALL_LINGUAS="am az cs da de el es fr it ja nl no pt pt_BR ru sk sr sr@Latn sv vi"
 GETTEXT_PACKAGE=gdl-1
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])
