Ported to GtkIconTheme. Use new gobject's class private data
2003-12-26  Gustavo Giraldez  <gustavo@localhost.localdomain>

	* gdl/gdl-icons.h:
	* gdl/gdl-icons.c: Ported to GtkIconTheme.  Use new gobject's
	class private data (g_type_class_add_private, etc.).  Removed
	"icon_zoom" property.
	(gdl_icons_new): Take one parameter instead of two.

	* symbol-browser-control/symbol-browser.c: Ported from symbol
	combo to GtkComboBox.

	* symbol-browser-control/symbol-browser-cobject.h:
	* symbol-browser-control/symbol-browser-cobject.c: Ported from
	BonoboXObject to BonoboObject.

	* configure.in: Added DEPRECATED_FLAGS.  Define DEPRECATED_FLAGS
	and error compiler warnings only in maintainer mode.  Require Gtk+
	2.3.0.

	* gdl/gdl-tools.c (gdl_pixmaps_free): Fix inverted precondition.

	* gdl/gdl-dock.c (gdl_dock_get_property): Replace deprecated
	g_value_set_string_take_ownership with g_value_take_string.

	* symbol-browser-control/test-symbol-browser.c:
	* symbol-browser-control/factory.c:
	* gdl/test-dataview.c:
	* gdl/gdl-dock-item-grip.c:
	* gdl/gdl-data-model-test.c:
	* gdl/gdl-data-frame.c: Fix compiler warnings.

--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,7 @@ AC_SUBST(GDL_VERSION)
 SNAPSHOT=0_`date +%Y%m%d_%H%M%S`_cvs
 AC_SUBST(SNAPSHOT)
 
-GTK_REQUIRED=2.2.0
+GTK_REQUIRED=2.3.0
 GNOME_REQUIRED=2.2.0
 BONOBOUI_REQUIRED=2.2.0
 XML_REQUIRED=2.2.8
@@ -255,7 +255,15 @@ AC_STDC_HEADERS
 AM_PROG_LIBTOOL
 AM_SANITY_CHECK
 
-GNOME_COMPILE_WARNINGS(maximum)
+if test x$MAINT = x; then
+    GNOME_COMPILE_WARNINGS(error)
+    DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+else
+    GNOME_COMPILE_WARNINGS(maximum)
+    DEPRECATED_FLAGS=""
+fi
+AC_SUBST(DEPRECATED_FLAGS)
+
 
 dnl ***************
 dnl GNOME Libraries 
