--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,7 @@ gdl/gdl-dock-object.c
 gdl/gdl-dock-paned.c
 gdl/gdl-dock-placeholder.c
 gdl/gdl-dock-tablabel.c
+gdl/gdl-dock-bar.c
 gdl/gdl-dock.c
 gdl/gdl-recent.c
 gdl/gdl-icons.c
