--- a/configure.in
+++ b/configure.in
@@ -297,7 +297,7 @@ AC_SUBST(GLIB_GENMARSHAL)
 GLIB_MKENUMS="`$PKG_CONFIG --variable=glib_mkenums glib-2.0`"
 AC_SUBST(GLIB_MKENUMS)
 
-ALL_LINGUAS="am az ca cs da de el es fr hr it ja mk ml nl no pl pt pt_BR ru sk sr sr@Latn sv vi zh_CN"
+ALL_LINGUAS="am az ca cs da de el en_CA es fr hr it ja mk ml nl no pl pt pt_BR ru sk sr sr@Latn sv vi zh_CN"
 GETTEXT_PACKAGE=gdl-1
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])
