--- a/gdl-1.0.pc.in
+++ b/gdl-1.0.pc.in
@@ -7,6 +7,6 @@ idldir=@datadir@/idl/libgdl-1.0
 Name: gdl
 Description: Gnome DevTool Libraries
 Version: @VERSION@
-Requires:  libbonoboui-2.0 libgnome-2.0 gtk+-2.0 libxml-2.0 libglade-2.0
+Requires: libgnome-2.0 gtk+-2.0 libxml-2.0 libglade-2.0
 Libs: -L${libdir} -lgdl-1
 Cflags: -I${includedir}
