--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,6 @@ EXTRA_DIST = 			\
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gdl-1.0.pc
 
-CLEANFILES = gdl-1.0.pc
+CLEANFILES = gdl-1.0.pc intltool-extract intltool-merge intltool-update
 
 
