--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -4,8 +4,7 @@ INCLUDES = \
 	-DGDL_IMAGESDIR=\""$(gdl_images_dir)"\"		\
 	-I$(includedir) -I$(top_srcdir)			\
 	$(WARN_CFLAGS) $(DEPRECATED_FLAGS)		\
-	$(GDL_DEPENDENCIES_CFLAGS) $(XML_CFLAGS) \
-	$(GNOME_CFLAGS)
+	$(GDL_DEPENDENCIES_CFLAGS) $(XML_CFLAGS)
 
 lib_LTLIBRARIES = libgdl-1.la
 
@@ -24,6 +23,7 @@ CLEANFILES =					\
 libgdl_headers = \
 	gdl.h \
 	gdl-tools.h \
+	gdl-combo-button.h \
 	gdl-dock-object.h \
 	gdl-dock-master.h \
 	gdl-dock.h \
@@ -34,19 +34,16 @@ libgdl_headers = \
 	gdl-dock-layout.h \
 	gdl-dock-placeholder.h \
 	gdl-dock-bar.h \
-	gdl-combo-button.h \
-	gdl-stock.h
-
-if HAVE_GNOME
-libgdl_headers += \
 	gdl-icons.h \
-	gdl-recent.h
-endif
+	gdl-recent.h \
+	gdl-stock.h
 
 libgdl_1_la_SOURCES = \
 	$(libgdl_headers) \
 	gdl-i18n.h \
 	gdl-i18n.c \
+	gdl-tools.c \
+	gdl-combo-button.c \
 	gdl-dock-object.c \
 	gdl-dock-master.c \
 	gdl-dock.c \
@@ -59,29 +56,19 @@ libgdl_1_la_SOURCES = \
 	gdl-dock-layout.c \
 	gdl-dock-placeholder.c \
 	gdl-dock-bar.c \
-	gdl-combo-button.c \
+	gdl-icons.c \
+	gdl-recent.c \
 	gdl-stock.c \
 	libgdltypebuiltins.h \
 	libgdltypebuiltins.c \
 	libgdlmarshal.h \
 	libgdlmarshal.c
 
-if HAVE_GNOME
-libgdl_1_la_SOURCES += \
-	gdl-icons.c \
-	gdl-recent.c
-endif
-
 libgdl_1_la_LIBADD = \
 	$(GDL_DEPENDENCIES_LIBS) \
-	$(XML_LIBS) \
-	$(GNOME_LIBS)
+	$(XML_LIBS)
 
-noinst_PROGRAMS=test-dock test-combo-button
-
-if HAVE_GNOME
-	noinst_PROGRAMS += test-dataview
-endif
+noinst_PROGRAMS=test-dock test-dataview test-combo-button
 
 test_dock_sources=test-dock.c
 test_dock_LDADD=libgdl-1.la $(XML_LIBS)
