--- a/configure.in
+++ b/configure.in
@@ -34,19 +34,17 @@ AC_SUBST(GDL_VERSION)
 SNAPSHOT=0_`date +%Y%m%d_%H%M%S`_cvs
 AC_SUBST(SNAPSHOT)
 
-GTK_REQUIRED=2.6.0
-GNOME_REQUIRED=2.8.0
+GTK_REQUIRED=2.3.0
+GNOME_REQUIRED=2.5.0
 BONOBOUI_REQUIRED=2.2.0
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=2.0.0
-GNOME_VFS_REQUIRED=2.10.0
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
 AC_SUBST(BONOBOUI_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
-AC_SUBST(GNOME_VFS_REQUIRED)
 
 AM_MAINTAINER_MODE
 
@@ -72,47 +70,20 @@ AC_SUBST(DEPRECATED_FLAGS)
 
 
 dnl ***************
-dnl GTK Libraries 
+dnl GNOME Libraries 
 dnl ***************
-PKG_CHECK_MODULES(GDL_DEPENDENCIES, 
-	gtk+-2.0 >= $GTK_REQUIRED 
-	libglade-2.0 >= $LIBGLADE_REQUIRED)
-AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
-AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
 PKG_CHECK_MODULES(XML, libxml-2.0 >= $XML_REQUIRED)
 AC_SUBST(XML_CFLAGS)
 AC_SUBST(XML_LIBS)
 
-dnl ****************
-dnl GNOME Libraries
-dnl ****************
-
-
-AC_ARG_ENABLE(gnome,
-	[ --disable-gnome	Compile without gnome support], 
-	[ if test "$enableval" = "no"; then
-		user_disabled_gnome=1
-	  fi ],
-	[ user_disabled_gnome=0 ])
-
-AC_MSG_CHECKING(if gnome is disabled)
-if test "$user_disabled_gnome" = 1; then
-	AC_MSG_RESULT(yes)
-	gnome="no"
-else
-	AC_MSG_RESULT(no)
-	
-	PKG_CHECK_MODULES(GNOME,
-		[libgnomeui-2.0 >= $GNOME_REQUIRED, 
-		gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED],
-		[gnome="yes"],
-		[gnome="no"])
-	AC_SUBST(GNOME_CFLAGS)
-	AC_SUBST(GNOME_LIBS)
-fi
-
-AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
+PKG_CHECK_MODULES(GDL_DEPENDENCIES, 
+	gtk+-2.0 >= $GTK_REQUIRED 
+	libgnomeui-2.0 >= $GNOME_REQUIRED
+	libbonoboui-2.0 >= $BONOBOUI_REQUIRED
+	libglade-2.0 >= $LIBGLADE_REQUIRED)
+AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
+AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
 # marshal and enum generators
 GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
@@ -146,11 +117,3 @@ po/Makefile.in
 gdl.spec
 gdl-1.0.pc
 ])
-
-echo "-------------------------------------------------------------------"
-if [ test x$gnome = xyes ]; then
-        echo "Building with GNOME support: .....................YES"
-else
-        echo "Building with GNOME support: .....................NO"
-fi
-echo "-------------------------------------------------------------------"
