Added dockbar buttons style (icons/text/both/auto).
	* gdl/Makefile.am, gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
	gdl/test-dock.c: Added dockbar buttons style (icons/text/both/auto).

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -118,6 +118,7 @@ libgdltypebuiltins.c: $(libgdl_headers)
 	@GLIB_MKENUMS@ \
 			--fhead "#include <glib-object.h>\n" \
 			--fhead "#include \"libgdltypebuiltins.h\"\n\n" \
+                        --fhead "#include \"gdl-dock-bar.h\"\n\n" \
 			--fprod "\n/* enumerations from \"@filename@\" */" \
 			--vhead "static const G@Type@Value _@enum_name@_values[] = {" \
 			--vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
