--- a/configure.in
+++ b/configure.in
@@ -33,11 +33,12 @@ AC_SUBST(GDL_VERSION)
 SNAPSHOT=0_`date +%Y%m%d_%H%M%S`_cvs
 AC_SUBST(SNAPSHOT)
 
-GTK_REQUIRED=2.3.0
-GNOME_REQUIRED=2.5.0
+GTK_REQUIRED=2.4.0
+GNOME_REQUIRED=2.6.0
 BONOBOUI_REQUIRED=2.2.0
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=2.0.0
+GNOME_VFS_REQUIRED=2.6.0
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
@@ -109,18 +110,16 @@ else
 		[gnome="no"])
 	AC_SUBST(GNOME_CFLAGS)
 	AC_SUBST(GNOME_LIBS)
-
-	if test x$MAINT = x; then
-	    DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
-	    # TODO specify flags per hand, no gnome-common on win32
-	    #GNOME_COMPILE_WARNINGS(error)
-	    #else
-	    # TODO GNOME_COMPILE_WARNINGS(maximum)
-	fi
+	AC_MSG_RESULT([$gnome])
 fi
-AC_SUBST(DEPRECATED_FLAGS)
+
 AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
 
+
+if test x$MAINT = x; then
+	DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+	AC_SUBST(DEPRECATED_FLAGS)
+fi
 
 AC_MSG_CHECKING([for native Win32])
 case "$host" in
